# assignment3-scaling

./: .gitignore  chinchilla_isoflops_problem.ipynb  pyproject.toml  test.ipynb
writeup/: main.aux  main.tex  q1.tex  q2.tex  q3.tex
